Closed Bug 1203819 Opened 10 years ago Closed 10 years ago

Fix loop condition in BluetoothPbapManager::PackPropertiesMask

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-b2g:2.2r+, firefox43 fixed, b2g-v2.2r fixed, b2g-master affected)

RESOLVED FIXED
FxOS-S7 (18Sep)
blocking-b2g 2.2r+
Tracking Status
firefox43 --- fixed
b2g-v2.2r --- fixed
b2g-master --- affected

People

(Reporter: ben.tian, Assigned: ben.tian)

References

Details

Attachments

(2 files)

The condition is incorrect as I gave wrong comment in bug 1180554 comment 3. This bug is to fix it.
Also revise some comments.
Assignee: nobody → btian
Attachment #8659700 - Flags: review?(shuang)
Set blocking-b2g:2.2r+ since this bug impacts on 2.2r bluetooth feature PBAP.
blocking-b2g: --- → 2.2r+
Blocks: 1203821
Comment on attachment 8659700 [details] [diff] [review] [m-c] Patch 1: Fix loop condition in BluetoothPbapManager::PackPropertiesMask, r=shuang Review of attachment 8659700 [details] [diff] [review]: ----------------------------------------------------------------- LGTM, what kinds of tests do you perform?
Attachment #8659700 - Flags: review?(shuang) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S7 (18Sep)
Comment on attachment 8659700 [details] [diff] [review] [m-c] Patch 1: Fix loop condition in BluetoothPbapManager::PackPropertiesMask, r=shuang Undo the mis-tag.
Attachment #8659700 - Attachment is obsolete: false
Attachment #8659700 - Attachment description: Patch 1 (v1): Fix loop condition in BluetoothPbapManager::PackPropertiesMask → [m-c] Patch 1: Fix loop condition in BluetoothPbapManager::PackPropertiesMask, r=shuang
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: