Bug 1203819 - Fix loop condition in BluetoothPbapManager::PackPropertiesMask, r=shuang